--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -2,28 +2,45 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name OpticksCoreTest)
 project(${name})
 
-file(GLOB TEST_CC_SRCS "*Test.cc")
+#file(GLOB TEST_SOURCES "*Test.cc")
 
+set(TEST_SOURCES 
 
+    OpticksQueryTest.cc
+    IndexerTest.cc
 
+)
 
-foreach(TEST_CC_SRC ${TEST_CC_SRCS})
-    get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
-    add_executable(${TGT} ${TEST_CC_SRC})
+set(FUTURE_TEST_SOURCES 
 
-    add_test(${name}.${TGT} ${TGT})
+    OpticksTest.cc
+    EvtLoadTest.cc
+    NGunConfigTest.cc
+    OpticksCfgTest.cc
+    OpticksEventTest.cc
+    OpticksResourceTest.cc
+
+)
+
+foreach(TEST_SOURCE ${TEST_SOURCES})
+    get_filename_component(TGT ${TEST_SOURCE} NAME_WE)
+    add_executable(${TGT} ${TEST_SOURCE})
+
+    set(testname ${name}.${TGT})
+
+    add_test(${testname} ${TGT})
     add_dependencies(check ${TGT})
 
     target_link_libraries(${TGT} 
                ${LIBRARIES} OpticksCore
     )
-    install(TARGETS ${TGT} DESTINATION bin)
+    install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
 
 # cmakex-
-set_property(TEST ${name}.OpticksResourceTest PROPERTY ENVIRONMENT 
-   "OPTICKS_GEOKEY=DAE_NAME_SPANNER"
-   "DAE_NAME_SPANNER=/tmp/spanner_in_works.dae"
- )
+#set_property(TEST ${name}.OpticksResourceTest PROPERTY ENVIRONMENT 
+#   "OPTICKS_GEOKEY=DAE_NAME_SPANNER"
+#   "DAE_NAME_SPANNER=/tmp/spanner_in_works.dae"
+# )
 
