--- a/optix/ggeo/tests/CMakeLists.txt
+++ b/optix/ggeo/tests/CMakeLists.txt
@@ -2,9 +2,22 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name GGeoTest)
 project(${name})
 
-file(GLOB TEST_CC_SRCS "*Test.cc")
+#file(GLOB TEST_CC_SRCS "*Test.cc")
 
-foreach(TEST_CC_SRC ${TEST_CC_SRCS})
+
+set(TEST_SOURCES
+ 
+    GConstantTest.cc
+    GDomainTest.cc
+    GAryTest.cc
+    GPropertyBaseTest.cc
+
+)
+
+
+
+
+foreach(TEST_CC_SRC ${TEST_SOURCES})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
 
@@ -13,7 +26,7 @@ foreach(TEST_CC_SRC ${TEST_CC_SRCS})
 
 
     target_link_libraries(${TGT} ${LIBRARIES} GGeo)
-    install(TARGETS ${TGT} DESTINATION bin)
+    install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
 
