proceeding with GGEO, uncaught runtime errors yield unhelpful dialog boxes and dont inform on location : so catch them

--- a/optix/ggeo/tests/CMakeLists.txt
+++ b/optix/ggeo/tests/CMakeLists.txt
@@ -5,12 +5,23 @@ project(${name})
 #file(GLOB TEST_CC_SRCS "*Test.cc")
 
 
-set(TEST_SOURCES
- 
+set(TEST_OK
+
     GConstantTest.cc
     GDomainTest.cc
     GAryTest.cc
     GPropertyBaseTest.cc
+
+
+    GBufferTest.cc
+    GMatrixTest.cc
+    GVectorTest.cc
+
+)
+
+
+set(TEST_SOURCES
+
 
 )
 
