GGEO done, all tests passing, however no geometry yet

--- a/optix/ggeo/tests/CMakeLists.txt
+++ b/optix/ggeo/tests/CMakeLists.txt
@@ -2,25 +2,20 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name GGeoTest)
 project(${name})
 
-#file(GLOB TEST_CC_SRCS "*Test.cc")
-
-
-set(TEST_OK
+#file(GLOB TEST_SOURCES "*Test.cc")
+set(TEST_SOURCES
 
     GConstantTest.cc
     GDomainTest.cc
     GAryTest.cc
 
-
     GBufferTest.cc
-    GMatrixTest.cc
     GVectorTest.cc
 
     GPropertyMapBaseTest.cc
     GPropertyBaseTest.cc
 
     GItemListTest.cc
-    GMaterialTest.cc
     GMaterialLibTest.cc
 
     GSkinSurfaceTest.cc
@@ -37,36 +32,55 @@ set(TEST_OK
     GArrayTest.cc
     GTransformsTest.cc
     GIdsTest.cc
-)
-
-
-set(TEST_SOURCES
-
     GItemIndexTest.cc
+    GTreePresentTest.cc
+    GCSGTest.cc
+    GPartsTest.cc
+    GPmtTest.cc
 
+    BoundariesNPYTest.cc
+    GAttrSeqTest.cc
+    GBBoxMeshTest.cc
 
-)
+    GColorsTest.cc
+    GFlagsTest.cc
+    GGeoLibTest.cc
 
+    GGeoTest.cc
+    GGeoTestTest.cc
+    GMakerTest.cc
 
-set(OTHERS
+    GMergedMeshTest.cc
+    GMatrixTest.cc
+    GMaterialTest.cc
 
+    GPropertyDebugTest.cc
     GPropertyMapTest.cc
 
+    GPropertyTest.cc
+    GSurfaceLibTest.cc
+    GTestBoxTest.cc
+
+    LookupTest.cc
+    RecordsNPYTest.cc
+    TorchStepNPYTest.cc
 
 )
+
+set(_TEST_SOURCES
+
+
+
+)
+
 
 
 
 foreach(TEST_CC_SRC ${TEST_SOURCES})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
-
     add_test(${name}.${TGT} ${TGT})
     add_dependencies(check ${TGT})
-
-
     target_link_libraries(${TGT} ${LIBRARIES} GGeo)
     install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
-
-
