--- a/graphics/assimprap/tests/CMakeLists.txt
+++ b/graphics/assimprap/tests/CMakeLists.txt
@@ -2,9 +2,22 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name AssimpRapTest)
 project(${name})
 
-file(GLOB TEST_CC_SRCS "*Test.cc")
+#file(GLOB TEST_SOURCES "*Test.cc")
 
-foreach(TEST_CC_SRC ${TEST_CC_SRCS})
+
+set(_TEST_SOURCES
+
+)
+
+set(TEST_SOURCES
+
+     AssimpRapTest.cc   
+
+)
+
+
+
+foreach(TEST_CC_SRC ${TEST_SOURCES})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
 
