opticksgeo- compiling but missing mesh0

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -143,6 +143,6 @@ target_link_libraries( ${name} ${LIBRARIES} )
 install(TARGETS ${name}  DESTINATION lib)
 install(FILES ${hdrs} DESTINATION include/${name})
 
-add_subdirectory(tests EXCLUDE_FROM_ALL)
-#add_subdirectory(tests)
+#add_subdirectory(tests EXCLUDE_FROM_ALL)
+add_subdirectory(tests)
 
