--- a/opticksgeo/CMakeLists.txt
+++ b/opticksgeo/CMakeLists.txt
@@ -6,6 +6,7 @@ include(EnvBuildOptions)
 include(EnvCompilationFlags)   
 
 find_package(GLM REQUIRED)
+find_package(PLog REQUIRED)
 find_package(OpticksBoost REQUIRED)
 find_package(BoostRap REQUIRED)
 find_package(NPY REQUIRED)
@@ -13,6 +14,7 @@ find_package(OpticksCore REQUIRED)
 
 set(BASE_INCLUDES
    ${GLM_INCLUDE_DIRS} 
+   ${PLog_INCLUDE_DIRS} 
    ${OpticksBoost_INCLUDE_DIRS} 
    ${BoostRap_INCLUDE_DIRS}
    ${NPY_INCLUDE_DIRS} 
@@ -20,6 +22,7 @@ set(BASE_INCLUDES
 )
 set(BASE_LIBRARIES
    ${GLM_LIBRARIES}
+   ${PLog_LIBRARIES}
    ${OpticksBoost_LIBRARIES}
    ${BoostRap_LIBRARIES}
    ${NPY_LIBRARIES}
@@ -27,6 +30,7 @@ set(BASE_LIBRARIES
 )
 set(BASE_DEFINITIONS
    ${GLM_DEFINITIONS} 
+   ${PLog_DEFINITIONS} 
    ${OpticksBoost_DEFINITIONS} 
    ${BoostRap_DEFINITIONS}
    ${NPY_DEFINITIONS}
@@ -84,13 +88,24 @@ set(LIBRARIES
 include_directories(${INCLUDES})
 add_definitions(${DEFINITIONS})
 
-set(SOURCES
-    OpticksGeometry.cc
-)
 
+set(SOURCES
+
+    OKGEO_LOG.cc
+    OpticksGeometry.cc
+
+)
 set(HEADERS
+
+    OKGEO_LOG.hh
+    OKGEO_API_EXPORT.hh
+    OKGEO_HEAD.hh
+    OKGEO_TAIL.hh
+
     OpticksGeometry.hh
 )
+
+
 
 add_library(${name} SHARED ${SOURCES} )
 target_link_libraries( ${name} ${LIBRARIES})
