--- a/opticksgeo/tests/CMakeLists.txt
+++ b/opticksgeo/tests/CMakeLists.txt
@@ -2,12 +2,15 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name OpticksGeometryTest)
 project(${name})
 
-file(GLOB TEST_CC_SRCS "*Test.cc")
+#file(GLOB TEST_CC_SRCS "*Test.cc")
+
+set(TEST_SOURCES
+    OpticksGeometryTest.cc
+)
 
 
 
-
-foreach(TEST_CC_SRC ${TEST_CC_SRCS})
+foreach(TEST_CC_SRC ${TEST_SOURCES})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
 
@@ -17,7 +20,7 @@ foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     target_link_libraries(${TGT} 
                ${LIBRARIES} OpticksGeometry
     )
-    install(TARGETS ${TGT} DESTINATION bin)
+    install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
 
