--- a/graphics/oglrap/tests/CMakeLists.txt
+++ b/graphics/oglrap/tests/CMakeLists.txt
@@ -2,9 +2,21 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name OGLRapTest)
 project(${name})
 
-file(GLOB TEST_CC_SRCS "*Test.cc")
+#file(GLOB TEST_CC_SRCS "*Test.cc")
 
-foreach(TEST_CC_SRC ${TEST_CC_SRCS})
+
+set(TEST_SOURCES
+
+    DynamicDefineTest.cc
+    FrameTest.cc
+    ModelToWorldTest.cc
+    ProgTest.cc
+    SceneTest.cc
+
+)
+
+
+foreach(TEST_CC_SRC ${TEST_SOURCES})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
 
@@ -12,7 +24,7 @@ foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     add_dependencies(check ${TGT})
 
     target_link_libraries(${TGT} ${LIBRARIES} OGLRap)
-    install(TARGETS ${TGT} DESTINATION bin)
+    install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
 
