--- a/graphics/ggeoview/tests/CMakeLists.txt
+++ b/graphics/ggeoview/tests/CMakeLists.txt
@@ -2,18 +2,24 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name GGeoViewTest)
 project(${name})
 
-file(GLOB TEST_CC_SRCS "*Test.cc")
+#file(GLOB TEST_CC_SRCS "*Test.cc")
 
-foreach(TEST_CC_SRC ${TEST_CC_SRCS})
-    get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
-    add_executable(${TGT} ${TEST_CC_SRC})
+set(TEST_SOURCES
+
+    flagsTest.cc
+    OTracerTest.cc
+    GGeoViewTest.cc
+)
+
+
+foreach(SRC ${TEST_SOURCES})
+    get_filename_component(TGT ${SRC} NAME_WE)
+    add_executable(${TGT} ${SRC})
 
     add_test(${name}.${TGT} ${TGT})
     add_dependencies(check ${TGT})
 
-    target_link_libraries(${TGT} 
-               ${LIBRARIES} GGeoViewLib
-    )
-    install(TARGETS ${TGT} DESTINATION bin)
+    target_link_libraries(${TGT} ${LIBRARIES} GGeoView)
+    install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
